version 0.3.6
- Letterbox fullscreen mode that preserves 4:3 aspect ratio
- Save configuration and game states to standard locations
- Fixes for NLS support
- Adonthell dialogue editor included again
- Support Python 3.x
- Support SDL 2.x
- Support gcc 6.x

version 0.3.5
- Bugfix with wrapping UTF-8 encoded text
- Use external SDL_Mixer and SDL_ttf libraries
- Support for 64bit GNU/Linux
- Support gcc 4.x

version 0.3.4
- Removed obsolete tools
- True Type Font support
- UTF-8 support

version 0.3.3
- Huge speed improvment with Python schedules
- Double screen mode
- Many bugfixes
- NLS support
- Support for many new architectures

version 0.3
- Added Python scripting
- Added Dialogue system
- Fullscreen support
- Now using Ogg Vorbis for music playback

version 0.2.1
- Switched from GGI to SDL
- Added sound system
- Basic Window/Text system
- Basic FMV system

version 0.1.a 
- First release

_________________________________________________________________________
For the latest news on the functionality of the Adonthell Project,  
please visit the project's website:

http://adonthell.nongnu.org/news/
