@@ -1,6 +1,7 @@
 version 0.3.6
 - Letterbox fullscreen mode that preserves 4:3 aspect ratio
 - Save configuration and game states to standard locations
+- Configuring a different font now actually works
 - Fixes for NLS support
 - Adonthell dialogue editor included again
 - Support Python 3.x
